<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/add_alarm_bg"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_tool_bar_title"
        >
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="50dip"
            android:layout_height="30dip"
            android:text="@string/cancel"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_button_1"
            style="@style/button_style"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_alarm"
                style="@style/titleTextStyle"
                />
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/ic_button_2"
            style="@style/button_style"
            />
    </RelativeLayout>


  <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true"
        >
        <LinearLayout
            android:id="@+id/LinearLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_layout"
                android:clickable="true"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="@drawable/preferencelayoutbackgroundmainviewhead"
                >
                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"

                    >
                    <TextView
                        android:id="@+id/repeat_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:fadingEdge="horizontal"
                        android:layout_centerVertical="true"
                        />
                    <ImageView
                        android:id="@+id/right_arrow"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_arrow_gray"
                        android:layout_alignParentRight="true"
                        />
                    <TextView
                        android:id="@+id/text_repeat"
                        android:layout_width="180dip"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="right"
                        android:textSize="18sp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:paddingRight="20dip"
                        android:layout_alignParentRight="true"
                        android:layout_toLeftOf="@id/right_arrow"
                        android:textColor="#385487"
                     />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sound_layout"
                android:background="@drawable/preferencelayoutbackgroundmainviewbody"
                >
                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"

                    >
                    <TextView
                        android:id="@+id/sound_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sound"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:fadingEdge="horizontal"
                        android:layout_centerVertical="true"

                        />
                    <ImageView
                        android:id="@+id/right_arrow"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/ic_arrow_gray"
                        android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                        />
                    <TextView
                        android:id="@+id/text_sound"
                        android:layout_width="180dip"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="right"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="18sp"
                        android:paddingRight="20dip"
                        android:layout_alignParentRight="true"
                        android:layout_toLeftOf="@id/right_arrow"
                        android:textColor="#385487"
                     />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/close_layout"
                android:background="@drawable/preferencelayoutbackgroundmainviewbody"
                >
                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    >
                    <TextView
                        android:id="@+id/caulk_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_alert_snooze_text"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:fadingEdge="horizontal"
                        android:layout_centerVertical="true"

                        />
                    <ImageView
                        android:id="@+id/imge_checkon"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/ic_checkon"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:id="@+id/alarm_name_layout"
                android:background="@drawable/preferencelayoutbackgroundmainviewfoot"
                >
                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                       android:padding="10dip"

                    >
                        <TextView
                        android:id="@+id/name_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:fadingEdge="horizontal"
                        android:layout_centerVertical="true"

                        />
                    <ImageView
                        android:id="@+id/right_arrow"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/ic_arrow_gray"
                        android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                        />
                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="180dip"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="right"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="18sp"
                        android:text="@string/app_name"
                        android:layout_toLeftOf="@id/right_arrow"
                        android:paddingRight="20dip"
                        android:layout_alignParentRight="true"
                        android:textColor="#385487"

                     />
                </RelativeLayout>
            </LinearLayout>
            </LinearLayout>

          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_scroller_alarm"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20dip"
            android:layout_marginTop="@dimen/alarm_padding_top"
            >
           <org.espier.clock.wheel.WheelView
                    android:id="@+id/am_pm"
                    android:layout_gravity="center_vertical"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:fadingEdge="none"
                    android:visibility="gone"
                />
            <org.espier.clock.wheel.WheelView
                    android:id="@+id/hour"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:fadingEdge="none"
                />
                 <org.espier.clock.wheel.WheelView
                    android:id="@+id/minutes"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:fadingEdge="none"
                    />
        </LinearLayout>
        </LinearLayout>


      </ScrollView>
</LinearLayout>
