<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@drawable/ic_timer_bg"
     >
 <ScrollView
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
    >
<RelativeLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@drawable/ic_timer_bg"
  >
             <TextView
                android:id="@+id/timewatch"
                android:layout_width="fill_parent"
                android:layout_height="240dip"
                android:layout_below="@id/lapwatch"
                android:gravity="center"
                android:textSize="75dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dip"
                />

             <LinearLayout
                 android:id="@+id/choosetimelayout"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="240dip"
                 android:gravity="center"
                 android:layout_marginTop="8dip"
                 >

                 <org.espier.clock.wheel.WheelView
                    android:id="@+id/hour"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="20dip"
                    android:fadingEdge="none"
                />
                 <org.espier.clock.wheel.WheelView
                    android:id="@+id/minutes"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="#000000"
                    android:layout_marginRight="20dip"
                    android:fadingEdge="none"
                    />
             </LinearLayout>

             <RelativeLayout
                 android:id="@+id/timinglayout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
                 android:layout_marginTop="50dip"
                 android:layout_below="@id/choosetimelayout"
                 android:padding="10dip"
                 android:orientation="horizontal"
                 android:background="@drawable/ic_button_big_gray"
                 >
                  <TextView
                      android:id="@+id/textEnd"
                      android:layout_width="200dip"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:textColor="@android:color/background_dark"
                      android:textStyle="bold"
                      android:layout_centerVertical="true"
                      />

                 <ImageView
                      android:id="@+id/arrayImage"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:background="@drawable/ic_arrows_black"
                      android:layout_centerVertical="true"
                     />
                 <TextView
                      android:id="@+id/audioName"
                      android:layout_width="100dip"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:layout_gravity="right"
                      android:textSize="18sp"
                      android:ellipsize="end"
                      android:layout_marginRight="30dip"
                      android:gravity="right"
                      android:singleLine="true"
                      android:layout_alignParentRight="true"
                      android:layout_toLeftOf="@id/arrayImage"
                      android:layout_centerVertical="true"
                      />
             </RelativeLayout>

             <Button
                 android:id="@+id/startBtn"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/timinglayout"
                 android:text="@string/start"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:layout_marginTop="20dip"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
                 android:background="@drawable/ic_button_start"
                 />
             <RelativeLayout
                 android:id="@+id/buttomLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/timinglayout"
                 android:layout_marginTop="20dip"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
                 android:visibility="gone"
                 >
                     <Button
                         android:id="@+id/cancelBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/white"
                           android:textSize="20sp"
                           android:layout_alignParentLeft="true"
                           android:text="@string/cancel"
                           android:background="@drawable/ic_button_red"
                           android:layout_centerVertical="true"
                         />
                     <Button
                         android:id="@+id/stopBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:textColor="@android:color/white"
                           android:textSize="20sp"
                           android:background="@drawable/ic_light_dark_button"
                           android:text="@string/stop"
                           android:layout_centerVertical="true"
                         />
             </RelativeLayout>
  </RelativeLayout>
</ScrollView>
</LinearLayout>
